--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html><head><title>7d wallpaper by aditya</title></head>
 <body>
 <a href="https://mail.google.com/mail/u/0?ui=2&ik=5cdd5bcc07&attid=0.1&permmsgid=msg-a:r8920268818424887008&th=192581d3564924bb&view=att&disp=safe&realattid=f_m1uvf9cr0">wallpaper</>
- <img src="https://mail.google.com/mail/u/0/?ui=2&ik=5cdd5bcc07&attid=0.1&permmsgid=msg-a:r8920268818424887008&th=192581d3564924bb&view=fimg&disp=thd&attbid=ANGjdJ8aEA08_Ata_obVAFP5XEmW7_A2SMBl0aAGdHxNCFiQb7hbCq9xJ6ed8OYDGmdswYO9dJz0Y3U1tDMrQy2eRyolBMq7it9ZLFZiKAVMxvZM2sBPO2qSmXjgv3Q&ats=2524608000000&sz=w1920-h857">
+ <img src="pic.jfif">
 
 </body>
 </html>
